# feature-flag-cicd-demo

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  flags.py  main.py  observability.py
docs/: DEMO.md
monitoring/grafana/dashboards/: feature-flag-demo.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/prometheus/: prometheus.yml
tests/: test_api.py  test_flags.py  test_observability.py
